11.kube-router/dni-function.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dni-function
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: dni-function
    spec:
      containers:
      - name: dni-function
        image: cmendibl3/dni:1.0.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: dni-function
spec:
  type: ClusterIP
  ports:
  - name:
    port: 80
  selector:
    app: dni-function
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dni-function
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: dni-function.[YOUR_DNS__ZONE_NAME]
    http:
      paths:
      - backend:
          serviceName: dni-function
          servicePort: 80
        path: /
